// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en <MultipleCustomHooks /> should mostrarse correctamente 1`] = `
<Fragment>
  <h1>
    BreakingBad Quotes
  </h1>
  <hr />
  <div
    className="alert alert-info text-center"
  >
    Loading...
  </div>
  <button
    className="btn btn-primary m-1 shadow"
    onClick={[Function]}
  >
    Next
  </button>
</Fragment>
`;

exports[`Pruebas en <MultipleCustomHooks /> should mostrarse correctamente con el valor de los inputs 1`] = `
<Fragment>
  <h1>
    BreakingBad Quotes
  </h1>
  <hr />
  <blockquote
    className="blockquote text-end"
  >
    <p
      className=""
    >
      Hola
    </p>
    <footer
      className="blockquote-footer"
    >
      Pepito
    </footer>
  </blockquote>
  <button
    className="btn btn-primary m-1 shadow"
    onClick={[Function]}
  >
    Next
  </button>
</Fragment>
`;
